Add Checkstyle, SpotBugs, and Spotless (google-java-format) to build; fix all main source warnings
- Add checkstyle, spotbugs, and spotless plugins to build.gradle.kts
- Add config/checkstyle/checkstyle.xml with moderate ruleset
- Apply google-java-format across all source files via spotlessApply
- Rename enum types to PascalCase (RESTRICTION_TYPE, RENDER_STATE_KEYS, ALIGN_TYPE, etc.)
- Rename pagePattern -> PAGE_PATTERN in PageService
- Make VersionController.INSTANCE private with a getInstance() getter
- Allow single-line if statements and commented empty blocks in Checkstyle config
- Document spotlessApply and checkstyle tasks in README